Added some more documentation, options to GigawordAnnotator and pipeline.sh. Also fixed the splitta bug in split_sentences.py